fixed some overflow

--- a/web-app/seafoam/src/styles.css
+++ b/web-app/seafoam/src/styles.css
@@ -32,7 +32,8 @@
 
 html {
   height: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 body {
@@ -53,15 +54,17 @@ body {
 
 .main {
   flex-grow: 1;
+  margin-left: 15rem;
 }
 
 .navbar {
+  position: fixed;
   display: flex;
   flex-flow: column;
   align-items: left;
   justify-content: flex-start;
   background-color: #131b23;
-  min-height: 60rem;
+  min-height: 100%;
   text-align: center;
   box-shadow: 1px 0px 10px 3px rgba(0, 0, 0, 0.511);
 }
